# earthquake

./: .env  .env.example  .gitignore  Bronze Notebook.ipynb  Gold Notebook.ipynb  README.md  Silver Notebook.ipynb  guide.md  pyproject.toml  requirements.txt
docs/architecture/: AzureDiagram.drawio  architecture.md  azure.md
notebooks/: Gold Notebook.ipynb  Silver Notebook.ipynb
scripts/: main.py  run_all.py
src/earthquake/: __init__.py  app.py  bronze_writer.py  config.py  extract_raw.py  gold_writer.py  io_utils.py  logging_utils.py  paths.py  pipeline.py  silver_writer.py  validate_path.py
src/earthquake/enrich/: gold.py
src/earthquake/extract/: usgs.py
src/earthquake/io/: fs.py  paths.py
src/earthquake/transform/: silver.py
synapse-pipeline/: Bronze Notebook.ipynb
tests/: test_enrich_gold.py  test_transform_silver.py
